[Fix] -> Normal Background image vertical align more settings.

--- a/inc/customizer/custom-controls/background/background.scss
+++ b/inc/customizer/custom-controls/background/background.scss
@@ -63,7 +63,7 @@
     }
 
     .more-settings {
-        margin-top: 6px;
+        margin-top: 12px;
         display: inline-block;
         padding: 5px 0 5px 0;
         float: right;
